Conclusão de Formulário

--- a/style.css
+++ b/style.css
@@ -1,8 +1,41 @@
 *{
     box-sizing: border-box;
 }
+
+@font-face {
+    font-family: Montserrat;
+    src: url(exeform/montserrat.ttf);
+}
+/*Edge*/
+::-webkit-input-placeholder{
+    font-family: Montserrat;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 19px;
+    color: #00000080;
+}
+/*Internet Explorar 10-11*/
+ :-ms-input-placeholder{
+    font-family: Montserrat;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 19px;
+    color: #00000080;
+} 
+/*Demias Navegadores*/
+::placeholder {
+    font-family: Montserrat;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 19px;
+    color: #00000080;
+
+}
+ 
+
+
 .Fullcenter {
-    background-color: brown;
+   
     padding: 15px;
     display: flex;
     justify-content: center;
@@ -10,11 +43,58 @@
 }
 
 #formulário {
-    background-color: blue;
+    
     width: 350px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content:center ;
 
+}
+
+h1 {
+    font-family: Montserrat;
+    font-weight: 800;
+    font-size: 25px;
+    color: black;
+}
+
+label{
+    font-family: Montserrat;
+    font-weight: 600;
+    font-size: 15px;
+    color: black;
+    display: inline-block;
+    margin: 10px opx;
+
+}
+ 
+.textfield {
+    width: 324px;
+    height: 58px;
+    background-color: aliceblue;
+    border-color: #767676;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 10px 0px;
+    font-family: Montserrat;
+    font-weight: 700;
+    font-size: 13px;
+    color: black;
+    line-height: 10px;
+}
+
+.whiteButton {
+    width: 150px;
+    height: 58px;
+    padding: 20px;
+    font-family: Montserrat;
+    font-weight: 600;
+    font-size: 150px;
+    color: black;
+}
+
+#satisfação {
+    width: 90%;
+    
 }
